se realizaron varios cambios: 1. SE CREO EL EJECUTABLE DEL PROYECTO YU EL .JAR. 2. SE HICIERON CAMBIOS COMO EL ARREGLO A LOS FUNCIONES DEL  ESTUDIANTE QUE ESTABAN FUNCIONANDO MAL A CAUSA DE LA ELIMINACION DE LOS .CLASS ANTIGUOS. 3. SE CAMBIO LA RESOLUCION DE PANTALLA PARA EL FORMULARIO DE RECIBO DE PAGO. 4. SE HIZO CAMBIO EN LA GESTION DE PAGO YA QUE NO FUNCIONABA LOS BOTONES DE LA COLUMNA ACCIONES  POR ELIMINACION DE LOS .CLASS ANTIGUO.